# standard_asr

./: .fossa.yml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  agents.md  goals.html  index.html  installation.html  main.py  mission.html  mkdocs.yml  objects.inv  pyproject.toml  quickstart.html  roadmap.html
.cursor/rules/: standard-asr-code-style.mdc
.gemini/: styleguide.md
.github/: copilot-instructions.md  dependabot.yml  zizmor.yml
.github/workflows/: canary.yml  ci.yml  dependency-review.yml  fossa_scan.yml  lint.yml  mkdocs.yml  numpy-nightly.yml  pyright.yml  pytest.yml  release.yml  ruff.yml  scorecard.yml  tests.yml  zizmor.yml
cookbook/: sample_client.py
cookbook/std_dummy_asr/: README.md  pyproject.toml
cookbook/std_dummy_asr/src/std_dummy_asr/: __init__.py  engine.py  entrypoint.py
cookbook/std_dummy_asr/tests/: test_dummy_asr.py
cookbook/std_faster_whisper/: README.md  entrypoint.py  main.py  pyproject.toml  std_asr_faster_whisper.py
cookbook/std_faster_whisper/src/std_faster_whisper/: __init__.py  entrypoint.py  std_asr_faster_whisper.py
cookbook/std_faster_whisper/tests/: conftest.py  test_faster_whisper.py
docs/: ai.md  compatibility-advisories.md  goals.md  index.md  installation.md  intro.md  misc.md  mission.md  notebook.md  plan.md  quickstart.md  roadmap.md  sample.py  todo.md
docs/design-notes/: 1 language code 设计.md  2 runtime_params 设计.md  3 feature flag 设计.md  5 差距分析 2026-06-05.md  6 核心设计决策 2026-06-06.md  7 设计审查综合 2026-06-06.md  8 验证综合与修订清单 2026-06-06.md  9 审查清单 2026-06-06.md
docs/feat_plan/: lazy-load.md  model-management.md
docs/for_app_dev/: discover_and_use.md  errors.md  streaming.md
docs/for_asr_dev/: adapting_engine.md  plugin_entrypoints.md  properties.md
docs/legacy/: README.md  api.md  features.md  for_asr_dev-properties.md  properties.md  protocol.md  results.md
docs/reference/: capabilities.md  compliance.md  engine.md  exceptions.md  index.md  results.md  streaming.md  wire.md
docs/research/: 1 大規模 ASR 調查 2026-05-09.md  2 FireRedASR.md  3 streaming 补充调查 2026-06-05.md  4 採樣率調查報告.md  5 流式活性与超时业界调查 2026-06-12.md
docs/spec/: api.md  cli.md  download-policy.md  options.md  properties.md  protocol.md  server.md  specification.md  streaming.md
docs/stylesheets/: extra.css
docs/work_doc/: ai.md  design-review-2026-06-09-mission-goals-research.md  dx-audit-2026-06-09.md  master_prompt.md  notebook.md  plan.md  sample.py  todo.md  words.md
for_app_dev/: discover_and_use.html  errors.html  streaming.html
for_asr_dev/: adapting_engine.html  plugin_entrypoints.html
reference/: capabilities.html  compliance.html  engine.html  exceptions.html  index.html  results.html  streaming.html  wire.html
search/: search_index.js  search_index.json
spec/: cli.html  download-policy.html  server.html  specification.html
src/standard_asr/: __init__.py  asr_config.py  asr_interface.py  asr_properties.py  audio_conversion.py  audio_format.py  audio_input.py  audio_negotiation.py  capabilities.py  cli.py  compliance.py  config.py  discovery.py  doctor.py  engine.py  error_redaction.py  exceptions.py  features.py  language.py  options.py  param_gating.py  renderers.py  resampling.py  results.py  runtime.py  runtime_params.py  server.py  something.md  streaming.py  utils.py  ver.md  wire.py  我在做 standard asr 的 entrypoint 部分, standa.ini
src/standard_asr/adapters/: asr_interface.py  azure_asr.py
src/standard_asr/utils/: __init__.py  audio_loader.py  save_utils.py
stylesheets/: extra.css
tests/: __init__.py  test_asr_interface.py  test_audio_conversion.py  test_audio_input.py  test_audio_loader_branches.py  test_audio_loader_security.py  test_audio_negotiation.py  test_audio_utils.py  test_capabilities.py  test_cli.py  test_compliance.py  test_config.py  test_discovery.py  test_doctor.py  test_error_redaction.py  test_exceptions.py  test_features.py  test_language.py  test_options.py  test_package_exports.py  test_param_gating.py  test_properties.py  test_resampling.py  test_results.py  test_runtime.py  test_runtime_params.py  test_save_utils.py  test_server.py  test_streaming.py  test_wav_encoder.py  test_wire.py
work/: criteria.md  current.md  plan.md  standard_asr_improvements.md  todo.csv
