[project]
name = "standard-asr"
version = "0.1.0"
description = "USB protocol for speech recognition libraries"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Yi-Ting Chiu", email = "mytim710@gmail.com" }]
dependencies = [
    "numpy>=1.24, <3",
    "pydantic>=2.5, <3",
]

[project.scripts]
standard-asr = "standard_asr.cli:main"

[dependency-groups]
dev = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pyright>=1.1.405",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.9",
    "ruff>=0.12.11",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
audio = ["soundfile>=0.12", "scipy>=1.10"]
docs = ["mkdocs-material>=9.6.18"]
server = ["fastapi>=0.110", "python-multipart>=0.0.9", "uvicorn>=0.30"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "standard_asr"

[tool.uv.workspace]
members = ["cookbook/std_faster_whisper", "cookbook/std_dummy_asr"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src/standard_asr", "tests", "cookbook/std_faster_whisper", "cookbook/std_dummy_asr"]
pythonVersion = "3.10"
reportMissingModuleSource = "warning"
reportUnusedVariable = "error"
reportUnknownMemberType = "error"

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--maxfail=1",
    "--cov=standard_asr",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["standard_asr"]
