[project]
name = "std-faster-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["faster-whisper>=1.2.0", "standard-asr>=0.1.0"]
[tool.uv.sources]
standard-asr = { workspace = true }

[project.entry-points."standard_asr.models"]
"faster-whisper/whisper" = "std_faster_whisper.entrypoint:create"
